# Bomberman

./: .gitattributes  .gitignore  Bomberman.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log  main.cpp  ogre.cfg  plugins.cfg  resources.cfg  ressources.cfg
INSTALL/: install.sh
Media/map/: map1
OGRE/: Plugin_CgProgramManager.so.1.9.0  Plugin_OctreeSceneManager.so.1.9.0  Plugin_OctreeZone.so.1.9.0
OGRE/Samples/: Sample_BSP.so.1.9.0  Sample_BezierPatch.so.1.9.0  Sample_CameraTrack.so.1.9.0  Sample_CelShading.so.1.9.0  Sample_Character.so.1.9.0  Sample_CubeMapping.so.1.9.0  Sample_DualQuaternion.so.1.9.0  Sample_DynTex.so.1.9.0  Sample_FacialAnimation.so.1.9.0  Sample_Fresnel.so.1.9.0  Sample_Lighting.so.1.9.0  Sample_MeshLod.so.1.9.0  Sample_PNTriangles.so.1.9.0  Sample_ParticleFX.so.1.9.0  Sample_SkeletalAnimation.so.1.9.0  Sample_SkyBox.so.1.9.0  Sample_SkyDome.so.1.9.0  Sample_SkyPlane.so.1.9.0  Sample_Smoke.so.1.9.0  Sample_SphereMapping.so.1.9.0  Sample_Tesselation.so.1.9.0  Sample_TextureArray.so.1.9.0  Sample_TextureFX.so.1.9.0  Sample_Transparency.so.1.9.0  Sample_VolumeCSG.so.1.9.0  Sample_VolumeTerrain.so.1.9.0
includes/: AGameObject.hpp  Collision.hpp  EventManager.hpp  HudManager.hh  InputManager.hpp  Map.hpp  MapManager.hpp  Wall.hpp  collision.hh
includes/Common/Manager/: CameraManager.hpp  ConfigManager.hpp  GameManager.hpp  NodeManager.hpp
includes/Controller/: EventManager.hpp  GameManager.hpp  KeyController.hpp  NodeManager.hpp
includes/Interfaces/: ACharacter.hpp  AGameObject.hpp
includes/Objects/: Bomb.hpp  Explosion.hpp  Ground.hpp  Item.hpp  Player.hpp  PlayerSettings.hpp  Wall.hpp
includes/irrKlang/: ik_ISoundEngine.h
media/map/: map1  map2  map3
media/materials/programs/: explode.hlsl
media/materials/scripts/: BombTexture.material  Bomberman.material  Ogre.material  cristal.material  explosion.particule  fire.material  hud.material  mutant.material  pingouin.material  test.material
media/models/: MutantMesh.mesh  MutantMesh.skeleton  bomb.mesh  cristal.mesh  cube2.mesh
media/particle/: Examples.particle  bombExplosion.particle  fire.particle  smoke.particle
src/: AGameObject.cpp  Collision.cpp  HudManager.cpp  Map.cpp  MapManager.cpp  collision.cpp  main.cpp
src/Common/Manager/: CameraManager.cpp  ConfigManager.cpp  GameManager.cpp  NodeManager.cpp
src/Controller/: EventManager.cpp  GameManager.cpp  InputManager.cpp  NodeManager.cpp
src/Objects/: ACharacter.cpp  AGameObject.cpp  Bomb.cpp  Explosion.cpp  Ground.cpp  Ia.cpp  Item.cpp  Player.cpp  PlayerSettings.cpp  Upgrade.cpp  Wall.cpp
src/indiegameplay/: Entity.cpp  Item.cpp  Leveldata.cpp  Makefile  main.cpp
src/indiegameplay/include/: Entity.hh  Item.hh  Leveldata.hh
